# mustafa

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  sample.env
src/: db.sqlite3  manage.py  pyproject.toml
src/config/: settings.py
src/core/admin/: __init__.py
src/core/management/commands/: samples.py
src/core/models/: __init__.py
src/main/: admin.py  apps.py  backends.py  models.py  urls.py  views.py
src/main/admin/: __init__.py  category.py  course.py  enrollment.py  review.py  student.py  teacher.py
src/main/migrations/: 0001_initial.py  0002_alter_enrollment_user_alter_review_user.py  0002_alter_lesson_options_course_currency_and_more.py  0002_course_requirements.py  0003_course_level.py  0003_type_color.py  0004_alter_type_color.py  0004_course_lesson_alter_type_color.py  0004_course_lessons_count_alter_course_level.py  0005_course_image.py  0006_profile.py
src/main/models/: __init__.py  category.py  course.py  enrollment.py  lesson.py  student.py  teacher.py
src/main/views/: __init__.py  home.py
src/main/views/common/: __init__.py  auth.py  common.py
src/main/views/course/: __init__.py  course.py  teacher.py
src/mustafa/: asgi.py  settings.py  urls.py  wsgi.py
src/static/js/: main.js
src/templates/: base.html  course-details.html  course.html  home.html  index.html  main.html  teacher-details.html  teachers.html
src/templates/auth/: login.html  signup.html
src/templates/common/: about.html  contact.html
src/templates/course/: course_details.html  course_list.html
src/templates/includes/: footer.html  header.html
(+54 files in other folders)
